--- a/config/database.yml
+++ b/config/database.yml
@@ -4,31 +4,22 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql2
-  database: wishtree
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
-  username: root
-  password:
-  host: 127.0.0.1
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  database: wishtree_test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
   timeout: 5000
-  username: root
-  password:
-  host: 127.0.0.1
 
 production:
-  adapter: mysql2
-  database: wishtree_prod
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
   timeout: 5000
-  username: root
-  password:
-  host: 127.0.0.1
