--- a/test/fixtures/wishes.yml
+++ b/test/fixtures/wishes.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: wishes
+#
+#  id                 :integer          not null, primary key
+#  due_date           :date
+#  wish_item          :string(255)
+#  percent_fullfilled :decimal(6, 5)
+#  created_at         :datetime
+#  updated_at         :datetime
+#  user_id            :integer
+#  needy_id           :integer
+#  purpose_id         :integer
+#  help_type_id       :integer
+#  quantity           :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
