--- a/test/fixtures/needies.yml
+++ b/test/fixtures/needies.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: needies
+#
+#  id         :integer          not null, primary key
+#  name       :string(255)
+#  age        :integer
+#  country    :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
