--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ test:
 
 production:
   adapter: mysql2
-  database: wishtree_prod
+  database: railsrumble_production
   pool: 5
   timeout: 5000
   username: root
